--- a/AboutUS.html
+++ b/AboutUS.html
@@ -5,6 +5,45 @@
   <title>Title</title>
 </head>
 <body>
-<h1>Це сторінка яка розповідає про історію магазину та місію нашої команди</h1>
+ <div>
+    <header><img src="img/logo.png" alt="Logo"> <h1>Corgi Bags</h1>
+
+      <nav>
+          <a href="AboutUS.html">Наша місія</a>
+          <a href="Contacts.html">Контакти</a>
+            <button >Меню
+              <div>
+                  <a href="index.html">Головна</a>
+                  <a href="ResponcePage.html">Відгуки</a>
+                  <a href="Catalog.html">Каталог</a>
+                  <a href="ShoppingBasket.html">Корзина</a>
+              </div>
+            </button>
+      </nav>
+    </header>
+  </div>
+  <h1>Вас вітає команда Corgi Bags</h1>
+  <p>  <span style="color: green">Corgi Bags - український виробник текстильної продукції для еко свідомого шопінгу.</span><br>
+    Наша позиція чітка і зрозуміла - запропонувати сучасну альтернативу поліетиленовим пакетам!<br>
+    Продукція Corgi Bags – сумки для покупок / шопери, экомешочки з сітки для продуктів / фруктовки,<br>
+    бавовняні мішечки для зберігання продуктів і упаковки подарунків, рюкзаки-органайзери для спорту,<br>
+    сумки для вологих речей WetBag. </p>
+ <p>
+    Ми вже 4-й рік на ринку і за цей час встигли полюбитися Вам, наші дорогі клієнти,<br>
+    за нашу якісну продукцію і бездоганний сервіс, про що свідчать Ваші численні позитивні відгуки. <br>
+    Всі наші позиції виготовлені в Україні, для українців з тканин високої якості. <br>
+    Ми контролюємо процес закупівлі матеріалів, пошиття продукції,<br>
+    ми зацікавлені в хороших умовах роботи швачок і гідної оплати за працю. <br>
+    Ми приймаємо замовлення на великі партії, брендіруем нашу продукцію відповідно до <br>
+    побажань клієнтів - вшивають Ваші етикетки, наносимо Ваш логотип. <br>
+    Ми пропонуємо стильний шопінг без шкоди для навколишнього середовища! <br>
+</p> <p>
+ <b>Чому це важливо саме зараз?</b>
+    Наша планета переживає велику екологічну кризу.  <br>Викиди парникових газів, острова сміття в Світовому океані ...<br>
+    Фахівці вважають, що у нас є ще максимум 50 років, щоб запобігти незворотні екологічні зміни.<br>
+    Перший крок - відмовитися від поліетилену і пластику;  стати на шлях боротьби з "вічним" сміттям,<br>
+    упаковкою і пакетами;  вибирати багаторазові, екологічні товари.<br>
+    Тому <b>закликаємо</b> всіх бути еко свідомими, підтримувати українського виробника,<br>
+    зменшувати свій вуглецевий слід, переходити на довговічне і екологічне!</p>
 </body>
 </html>
