--- a/Catalog.html
+++ b/Catalog.html
@@ -5,6 +5,60 @@
   <title>Каталог магазину</title>
 </head>
 <body>
-<h1>Каталог магазину</h1>
+ <div>
+    <header><img src="img/logo.png" alt="Logo"> <h1>Corgi Bags</h1>
+
+      <nav>
+          <a href="AboutUS.html">Наша місія</a>
+          <a href="Contacts.html">Контакти</a>
+            <button >Меню
+              <div>
+                  <a href="index.html">Головна</a>
+                  <a href="ResponcePage.html">Відгуки</a>
+                  <a href="Catalog.html">Каталог</a>
+                  <a href="ShoppingBasket.html">Корзина</a>
+              </div>
+            </button>
+      </nav>
+    </header>
+  </div>
+ <main>
+   <h2>Каталог</h2>
+   <a href="UnitPage.html">
+     <div>
+       <img src="img/sportbags1.png" alt="sport bag" width="200">
+       <p>
+         Код:     0001 <br>
+         Ціна:    180 грн <br>
+         Назва:   Торбинка для спорту <br>
+         Розмір:  L <br>
+       </p>
+     </div>
+   </a>
+   <a href="UnitPage.html">
+     <div>
+       <img src="img/pouches1.png" alt="pouches" width="200">
+       <p>
+         Код:     0002 <br>
+         Ціна:    30/40/50 грн <br>
+         Назва:   Еко мішечки <br>
+         Розмір:  S/M/L <br>
+       </p>
+     </div>
+   </a>
+   <a href="UnitPage.html">
+     <div>
+       <img src="img/wetbags1.png" alt="wet bags" width="200">
+       <p>
+         Код:     0004 <br>
+         Ціна:    100 грн <br>
+         Назва:   Сумки для вологих речей <br>
+         Розмір:  M <br>
+       </p>
+     </div>
+   </a>
+
+
+ </main>
 </body>
 </html>
