--- a/Contacts.html
+++ b/Contacts.html
@@ -5,6 +5,22 @@
   <title>Contacts</title>
 </head>
 <body>
-<h1>Це сторінка з контактами магазину</h1>
+ <div>
+    <header><img src="img/logo.png" alt="Logo"> <h1>Corgi Bags</h1>
+      <nav>
+          <a href="AboutUS.html">Наша місія</a>
+          <a href="Contacts.html">Контакти</a>
+            <button >Меню
+              <div>
+                  <a href="index.html">Головна</a>
+                  <a href="ResponcePage.html">Відгуки</a>
+                  <a href="Catalog.html">Каталог</a>
+                  <a href="ShoppingBasket.html">Корзина</a>
+              </div>
+            </button>
+      </nav>
+    </header>
+  </div>
+  <h1>Це сторінка з контактами магазину</h1>
 </body>
 </html>
