--- a/index.html
+++ b/index.html
@@ -23,36 +23,142 @@
 </head>
 
 <body>
-  <header> Corgi Bags
-    <nav>
-      <ul>
-        <li><a href="AboutUS.html">Наша місія</a></li>
-        <li><a href="Contacts.html">Контакти</a></li>
-        <li><div >
-          <button >Меню
-            <div>
-                <a href="index.html">Головна</a>
-                <a href="ResponcePage.html">Відгуки</a>
-                <a href="Catalog.html">Каталог</a>
-            </div>
-          </button>
-        </div></li>
+  <div>
+    <header><img src="img/logo.png" alt="Logo"> <h1>Corgi Bags</h1>
 
-      </ul>
-    </nav>
-  </header>
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+      <nav>
+          <a href="AboutUS.html">Наша місія</a>
+          <a href="Contacts.html">Контакти</a>
+            <button >Меню
+              <div>
+                  <a href="index.html">Головна</a>
+                  <a href="ResponcePage.html">Відгуки</a>
+                  <a href="Catalog.html">Каталог</a>
+                  <a href="ShoppingBasket.html">Корзина</a>
+              </div>
+            </button>
+      </nav>
+    </header>
+  </div>
+  <main>
+    <div> <h2> Новини! </h2>
+      <h3> "Хеллоувін Паті" 20% знижка</h3>
+      <p>Тільки з 29.10 по 5.11 акційна пропозиція для постійних клієнтів на набір "Хеллоувін Паті"
+        присвячена святу Хеллоувін  </p>
+      <h3> 4=5 </h3>
+      <p>Тільки у листопаді купляй набір з чотирьох мішечків та отримуй 5 у подарунок  </p>
+    </div>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <table>
+      <caption>Топ проданих товарів за цей місяць</caption>
+      <thead>
+        <tr>
+          <th>Назва</th>
+          <th>Ціна</th>
+          <th>Розмір</th>
+          <th>Кількість щасливих покупців</th>
+          <th>Колір</th>
+        </tr>
+      </thead>
+      <tbody>
+      <tr>
+          <td>Пoдарунковий набір "Happy Helloween"</td>
+          <td>100 грн</td>
+          <td>S/M/L</td>
+          <td>30</td>
+          <td>Помаранчевий, Червоний, Чорний</td>
+        </tr>
+        <tr>
+          <td>Еко мішечок</td>
+          <td>40 грн</td>
+          <td>М</td>
+          <td>30</td>
+          <td>Синій, Жовтий, Червоний, Чорний, Фіолетовий</td>
+        </tr>
+        <tr>
+          <td>Еко мішечок</td>
+          <td>50 грн</td>
+          <td>L</td>
+          <td>24</td>
+          <td>Синій, Жовтий, Червоний, Чорний, Фіолетовий, Лазурний</td>
+        </tr>
+         <tr>
+            <td>Торбинка для спорту</td>
+            <td>160 грн</td>
+            <td>L</td>
+            <td>21</td>
+            <td>Помаранчева, Салатова</td>
+        </tr>
+        <tr>
+            <td>Еко мішечок</td>
+            <td>30 грн</td>
+            <td>S</td>
+            <td>20</td>
+            <td>Синій, Жовтий, Червоний, Лазурний, Салатовий</td>
+        </tr>
+        <tr>
+            <td>Торбинка для покупок</td>
+            <td>200 грн</td>
+            <td>XL</td>
+            <td>12</td>
+            <td>Чорно-біла</td>
+        </tr>
+
+      </tbody>
+    </table>
+    <article>
+      <div>
+        <img src="https://images.prom.ua/2224823247_2224823247.jpg" alt="corgi" width="1000" >
+        <p> Тедді радий, що ти завітав до нього у магазин :)</p>
+      </div>
+    </article>
+    <div>
+      <span style="color: red;"> Corgi Bags - український виробник еко сумок високої якості. </span>
+        <h4>Ми відшиваємо:</h4>
+        <ol type="a">
+          <li>мішечки і бавовняні сумки для покупок</li>
+          <li> практичні сумки-шопери з плащової тканини</li>
+          <li> рюкзаки-органайзер для взуття</li>
+          <li> сумки для вологих речей WetBag</li>
+          <li> мішечки для пакування подарунків в дуже зручних розмірах.</li>
+        </ol>
+        <i>Наша продукція практична в використанні - для покупки, транспортування
+          і зберігання продуктів, <br>речей, взуття, косметики і будь-яких інших дрібниць.</i>
+    </div>
+    <div>
+      <img src="https://images.prom.ua/2613389399_2613389399.jpg" alt="bags" width="1000">
+    </div>
+
+
+  </main>
+
+  <aside>
+    <h3> Які переваги використання еко сумок?</h3>
+
+    <p>Перше та основне – це ідеальна заміна одноразових пакетів.
+      Про те, яким шкідливим є пластик, <br> чи то його необгрунтоване гіперспоживання,
+      не говорить хіба що тільки дуже лінива і байдужа людина. <br>  Еко сумка замість пакета з поліетилену –
+      одне з небагатьох вірних рішень для збереження здоров'я нашої планети. </p>
+      <p> Наступна перевага еко сумки –
+      Читай за  <a href="https://borsa.ua/dlya-choho-potribni-eko-sumky">посиланням</a> </p>
+
+    <h3> Чим відрізняється еко продукція від звичайної? </h3>
+    <a href="https://eko-poplavok.com/eko-produkcziya">Читай тут</a>
+
+    <br>
+    <p>Бажаєш залиши відугк? <a href="ResponcePage.html">Переходь за посиланням</a></p>
+  </aside>
+
+
+  <footer>
+
+    <p>
+      Контактна інформація: <br> corgibags@gmail.com <br>
+      +380990129004 <br>
+      проспект Миру 4Б, офіс 103 <br>
+    </p>
+    <p>&copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+  </footer>
 </body>
 
 </html>
