--- a/AboutUS.html
+++ b/AboutUS.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Про нас</title>
 </head>
 <body>
  <div>
@@ -22,6 +22,7 @@
       </nav>
     </header>
   </div>
+ <div>
   <h1>Вас вітає команда Corgi Bags</h1>
   <p>  <span style="color: green">Corgi Bags - український виробник текстильної продукції для еко свідомого шопінгу.</span><br>
     Наша позиція чітка і зрозуміла - запропонувати сучасну альтернативу поліетиленовим пакетам!<br>
@@ -45,5 +46,15 @@
     упаковкою і пакетами;  вибирати багаторазові, екологічні товари.<br>
     Тому <b>закликаємо</b> всіх бути еко свідомими, підтримувати українського виробника,<br>
     зменшувати свій вуглецевий слід, переходити на довговічне і екологічне!</p>
+   </div>
+ <footer>
+
+    <p>
+      Контактна інформація: <br> corgibags@gmail.com <br>
+      +380990129004 <br>
+      проспект Миру 4Б, офіс 103 <br>
+    </p>
+    <p>&copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+  </footer>
 </body>
 </html>
