--- a/Contacts.html
+++ b/Contacts.html
@@ -22,5 +22,14 @@
     </header>
   </div>
   <h1>Це сторінка з контактами магазину</h1>
+ <footer>
+
+    <p>
+      Контактна інформація: <br> corgibags@gmail.com <br>
+      +380990129004 <br>
+      проспект Миру 4Б, офіс 103 <br>
+    </p>
+    <p>&copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+  </footer>
 </body>
 </html>
