--- a/ShoppingBasket.html
+++ b/ShoppingBasket.html
@@ -3,21 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <title>Корзина покупок</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  />
+
 </head>
 <body>
 <div>
-    <header><img src="img/logo.png" alt="Logo"> <h1>Corgi Bags</h1>
-      <nav>
-          <a href="AboutUS.html">Наша місія</a>
-          <a href="Contacts.html">Контакти</a>
-            <button >Меню
-              <div>
+   <header class="top-bar"><img src="img/logo.png" alt="Logo"> <a href="index.html"> <h1>Corgi Bags</h1> </a>
+      <nav class="navbar">
+        <ul>
+          <li> <a href="AboutUS.html">Наша місія</a></li>
+          <li><a href="Contacts.html">Контакти</a></li>
+           <li> <button class="material-symbols-outlined"> menu
+              <div class="dropdown-menu">
                   <a href="index.html">Головна</a>
                   <a href="ResponcePage.html">Відгуки</a>
                   <a href="Catalog.html">Каталог</a>
                   <a href="ShoppingBasket.html">Корзина</a>
               </div>
-            </button>
+            </button></li>
+          </ul>
       </nav>
     </header>
   </div>
