--- a/Contacts.html
+++ b/Contacts.html
@@ -10,21 +10,39 @@
 </head>
 <body>
  <div>
-    <header class="top-bar"><img src="img/logo.png" alt="Logo"> <a href="index.html"> <h1>Corgi Bags</h1> </a>
-      <nav class="navbar">
-        <ul>
-          <li> <a href="AboutUS.html">Наша місія</a></li>
-          <li><a href="Contacts.html">Контакти</a></li>
-           <li> <button class="material-symbols-outlined"> menu
-              <div class="dropdown-menu">
-                  <a href="index.html">Головна</a>
-                  <a href="ResponcePage.html">Відгуки</a>
-                  <a href="Catalog.html">Каталог</a>
-                  <a href="ShoppingBasket.html">Корзина</a>
-              </div>
-            </button></li>
-          </ul>
-      </nav>
+    <header id="header-section">
+      <div class="conteiner conteiner-header">
+        <div class="header">
+          <a href="index.html">
+            <h1>Corgi Bags</h1>
+          </a>
+          <nav class="navbar">
+            <div class="nav-conteiner">
+              <ul class="nav-main">
+                <li> <a class="nav-item" href="AboutUS.html">Наша місія</a></li>
+                <li><a class="nav-item" href="Contacts.html">Контакти</a></li>
+              </ul>
+            </div>
+            <img src="img/logo.png" alt="Logo">
+            <div class="nav-conteiner">
+              <ul class="nav-main">
+                <li> <a class="nav-item" href="index.html">Головна</a></li>
+                <li><a class="nav-item" href="ResponcePage.html">Відгуки</a></li>
+                <li><a class="nav-item" href="Catalog.html">Каталог</a></li>
+                <li><a class="nav-item" href="ShoppingBasket.html">Корзина</a></li>
+      <!--          <li> <button class="material-symbols-outlined"> menu-->
+      <!--              <div class="dropdown-menu">-->
+      <!--                  <a href="index.html">Головна</a>-->
+      <!--                  <a href="ResponcePage.html">Відгуки</a>-->
+      <!--                  <a href="Catalog.html">Каталог</a>-->
+      <!--                  <a href="ShoppingBasket.html">Корзина</a>-->
+      <!--              </div>-->
+      <!--            </button></li>-->
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
     </header>
   </div>
   <h1>Це сторінка з контактами магазину</h1>
