Banner+News HTML&CSS

--- a/index.html
+++ b/index.html
@@ -55,19 +55,48 @@
       <!--            </button></li>-->
               </ul>
             </div>
-          </div>
-        </nav>
+          </nav>
+        </div>
       </div>
     </header>
   </div>
   <main>
-    <section class="news">
-      <div> <h2> Новини! </h2>
-        <h3> "Хеллоувін Паті" 20% знижка</h3>
-        <p>Тільки з 29.10 по 5.11 акційна пропозиція для постійних клієнтів на набір "Хеллоувін Паті"
-          присвячена святу Хеллоувін  </p>
-        <h3> 4=5 </h3>
-        <p>Тільки у листопаді купляй набір з чотирьох мішечків та отримуй 5 у подарунок  </p>
+    <section id="banner-section">
+      <div class="conteiner">
+        <div class="banner">
+          <div class="banner-info">
+            <h3 class="banner-header">Купуй тільки у нас!</h3>
+            <p class="banner-text">Найкраща якість на ринку</p>
+            <a href="Catalog.html"> <button class="banner-btn btn-primary">До каталогу</button></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="news">
+      <div class="conteiner">
+        <h2> Важлива інформація </h2>
+        <div class="conteiner-news">
+          <ul class="news-list">
+            <li class="news-list-item">
+              <img src="img/kit1.png">
+              <h3> "Хеллоувін Паті" 20% знижка</h3>
+              <p>Тільки з 29.10 по 5.11 акційна пропозиція для постійних клієнтів на набір "Хеллоувін Паті"
+              присвячена святу Хеллоувін  </p>
+            </li>
+            <li class="news-list-item" >
+              <img src="https://images.prom.ua/2224823247_2224823247.jpg" alt="corgi" width="1000" >
+              <p> Тедді радий, що ти завітав у його магазин</p>
+             <p> Corgi Bags - український виробник еко сумок високої якості. Ми відшиваємо мішечки і бавовняні
+                сумки для покупок, практичні сумки-шопери з плащової тканини, рюкзаки-органайзер для взуття,
+                сумки для вологих речей WetBag та мішечки для пакування подарунків</p>
+            </li>
+            <li class="news-list-item">
+              <img src="img/pouches1.png" alt="#">
+              <h3> 4=5 </h3>
+              <p>Тільки у листопаді купляй набір з чотирьох мішечків та отримуй 5 у подарунок  </p>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <table>
@@ -128,45 +157,46 @@
         </tbody>
       </table>
     <section>
-      <h2> Знаймовство з магазином</h2>
-      <article>
-        <div>
-          <img src="https://images.prom.ua/2224823247_2224823247.jpg" alt="corgi" width="1000" >
-          <p> Тедді радий, що ти завітав до нього у магазин :)</p>
-        </div>
-      </article>
-      <article>
-        <span style="color: red;"> Corgi Bags - український виробник еко сумок високої якості. </span>
-          <h4>Ми відшиваємо:</h4>
-          <ol type="a">
-            <li>мішечки і бавовняні сумки для покупок</li>
-            <li> практичні сумки-шопери з плащової тканини</li>
-            <li> рюкзаки-органайзер для взуття</li>
-            <li> сумки для вологих речей WetBag</li>
-            <li> мішечки для пакування подарунків в дуже зручних розмірах.</li>
-          </ol>
-          <i>Наша продукція практична в використанні - для покупки, транспортування
-            і зберігання продуктів, <br>речей, взуття, косметики і будь-яких інших дрібниць.</i>
-      </article>
-      <div>
-        <img src="https://images.prom.ua/2613389399_2613389399.jpg" alt="bags" width="1000">
-      </div>
-    </section>
-  </main>
-  <aside>
-    <h3> Які переваги використання еко сумок?</h3>
+<!--      <h2> Знаймовство з магазином</h2>-->
+<!--      <article>-->
+<!--        <div>-->
+<!--          <img src="https://images.prom.ua/2224823247_2224823247.jpg" alt="corgi" width="1000" >-->
+<!--          <p> Тедді радий, що ти завітав до нього у магазин :)</p>-->
+<!--        </div>-->
+<!--      </article>-->
+<!--      <article>-->
+<!--        <span style="color: red;"> Corgi Bags - український виробник еко сумок високої якості. </span>-->
+<!--          <h4>Ми відшиваємо:</h4>-->
+<!--          <ol type="a">-->
+<!--            <li>мішечки і бавовняні сумки для покупок</li>-->
+<!--            <li> практичні сумки-шопери з плащової тканини</li>-->
+<!--            <li> рюкзаки-органайзер для взуття</li>-->
+<!--            <li> сумки для вологих речей WetBag</li>-->
+<!--            <li> мішечки для пакування подарунків в дуже зручних розмірах.</li>-->
+<!--          </ol>-->
+<!--          <i>Наша продукція практична в використанні - для покупки, транспортування-->
+<!--            і зберігання продуктів, <br>речей, взуття, косметики і будь-яких інших дрібниць.</i>-->
+<!--      </article>-->
+<!--      <div>-->
+<!--        <img src="https://images.prom.ua/2613389399_2613389399.jpg" alt="bags" width="1000">-->
+<!--      </div>-->
+<!--    </section>-->
+<!--  </main>-->
+<!--  <aside>-->
+<!--    <h3> Які переваги використання еко сумок?</h3>-->
 
-    <p>Перше та основне – це ідеальна заміна одноразових пакетів.
-      Про те, яким шкідливим є пластик, <br> чи то його необгрунтоване гіперспоживання,
-      не говорить хіба що тільки дуже лінива і байдужа людина. <br>  Еко сумка замість пакета з поліетилену –
-      одне з небагатьох вірних рішень для збереження здоров'я нашої планети. </p>
-      <p> Наступна перевага еко сумки –
-      Читай за  <a href="https://borsa.ua/dlya-choho-potribni-eko-sumky">посиланням</a> </p>
+<!--    <p>Перше та основне – це ідеальна заміна одноразових пакетів.-->
+<!--      Про те, яким шкідливим є пластик, <br> чи то його необгрунтоване гіперспоживання,-->
+<!--      не говорить хіба що тільки дуже лінива і байдужа людина. <br>  Еко сумка замість пакета з поліетилену –-->
+<!--      одне з небагатьох вірних рішень для збереження здоров'я нашої планети. </p>-->
+<!--      <p> Наступна перевага еко сумки –-->
+<!--      Читай за  <a href="https://borsa.ua/dlya-choho-potribni-eko-sumky">посиланням</a> </p>-->
 
-    <h3> Чим відрізняється еко продукція від звичайної? </h3>
-    <a href="https://eko-poplavok.com/eko-produkcziya">Читай тут</a>
+<!--    <h3> Чим відрізняється еко продукція від звичайної? </h3>-->
+<!--    <a href="https://eko-poplavok.com/eko-produkcziya">Читай тут</a>-->
 
-    <br>
+<!--    <br>-->
+      </section>
     <p>Бажаєш залиши відугк? <a href="ResponcePage.html">Переходь за посиланням</a></p>
   </aside>
   <footer>
