--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
     <section id="news">
       <div class="conteiner">
-        <h2> Важлива інформація </h2>
+        <h2> Не пропусти! </h2>
         <div class="conteiner-news">
           <ul class="news-list">
             <li class="news-list-item">
@@ -94,6 +94,38 @@
               <img src="img/pouches1.png" alt="#">
               <h3> 4=5 </h3>
               <p>Тільки у листопаді купляй набір з чотирьох мішечків та отримуй 5 у подарунок  </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section id="advertising">
+      <div class="conteiner">
+        <div class="conteiner-advertising">
+          <ul class="main-list">
+            <li class="main-list-item">
+              <div class="conteiter-list-item">
+                <img src="img/kit3.png" alt="#" >
+                <div class="list-item-button">
+                 <a href="UnitPage.html"> <button class="banner-btn btn-primary btn-buy">Купити</button></a>
+                </div>
+              </div>
+            </li>
+            <li class="main-list-item" >
+               <div class="conteiter-list-item">
+                <img src="img/green_pouch1.png" alt="#" >
+                <div class="list-item-button">
+                 <a href="UnitPage.html"> <button class="banner-btn btn-primary btn-buy">Купити</button></a>
+                </div>
+              </div>
+            </li>
+            <li class="main-list-item">
+               <div class="conteiter-list-item">
+                <img src="img/kit2.png" alt="#" >
+                <div class="list-item-button">
+                 <a href="UnitPage.html"> <button class="banner-btn btn-primary btn-buy">Купити</button></a>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -156,56 +188,43 @@
 
         </tbody>
       </table>
-    <section>
-<!--      <h2> Знаймовство з магазином</h2>-->
-<!--      <article>-->
-<!--        <div>-->
-<!--          <img src="https://images.prom.ua/2224823247_2224823247.jpg" alt="corgi" width="1000" >-->
-<!--          <p> Тедді радий, що ти завітав до нього у магазин :)</p>-->
-<!--        </div>-->
-<!--      </article>-->
-<!--      <article>-->
-<!--        <span style="color: red;"> Corgi Bags - український виробник еко сумок високої якості. </span>-->
-<!--          <h4>Ми відшиваємо:</h4>-->
-<!--          <ol type="a">-->
-<!--            <li>мішечки і бавовняні сумки для покупок</li>-->
-<!--            <li> практичні сумки-шопери з плащової тканини</li>-->
-<!--            <li> рюкзаки-органайзер для взуття</li>-->
-<!--            <li> сумки для вологих речей WetBag</li>-->
-<!--            <li> мішечки для пакування подарунків в дуже зручних розмірах.</li>-->
-<!--          </ol>-->
-<!--          <i>Наша продукція практична в використанні - для покупки, транспортування-->
-<!--            і зберігання продуктів, <br>речей, взуття, косметики і будь-яких інших дрібниць.</i>-->
-<!--      </article>-->
-<!--      <div>-->
-<!--        <img src="https://images.prom.ua/2613389399_2613389399.jpg" alt="bags" width="1000">-->
+   </main>
+  <footer id="footer">
+    <div class="conteiner-footer">
+      <div class="footer-copywrite">
+        <p>corgibags@gmail.com</p>
+        <p> +380990129004<p>
+        <p>проспект Миру 4Б, офіс 103<p>
+        <p> &copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+      </div>
+    </div>
+<!--    <div id="footer-section" class="footer conteiner-footer">-->
+<!--    <nav class="navbar">-->
+<!--            <div class="nav-conteiner">-->
+<!--              <ul class="nav-main">-->
+<!--                <li> <a class="nav-item" href="AboutUS.html">Наша місія</a></li>-->
+<!--                <li><a class="nav-item" href="Contacts.html">Контакти</a></li>-->
+<!--              </ul>-->
+<!--            </div>-->
+<!--            <img src="img/logo.png" alt="Logo">-->
+<!--            <div class="nav-conteiner">-->
+<!--              <ul class="nav-main">-->
+<!--                <li> <a class="nav-item" href="index.html">Головна</a></li>-->
+<!--                <li><a class="nav-item" href="ResponcePage.html">Відгуки</a></li>-->
+<!--                <li><a class="nav-item" href="Catalog.html">Каталог</a></li>-->
+<!--                <li><a class="nav-item" href="ShoppingBasket.html">Корзина</a></li>-->
+<!--      &lt;!&ndash;          <li> <button class="material-symbols-outlined"> menu&ndash;&gt;-->
+<!--      &lt;!&ndash;              <div class="dropdown-menu">&ndash;&gt;-->
+<!--      &lt;!&ndash;                  <a href="index.html">Головна</a>&ndash;&gt;-->
+<!--      &lt;!&ndash;                  <a href="ResponcePage.html">Відгуки</a>&ndash;&gt;-->
+<!--      &lt;!&ndash;                  <a href="Catalog.html">Каталог</a>&ndash;&gt;-->
+<!--      &lt;!&ndash;                  <a href="ShoppingBasket.html">Корзина</a>&ndash;&gt;-->
+<!--      &lt;!&ndash;              </div>&ndash;&gt;-->
+<!--      &lt;!&ndash;            </button></li>&ndash;&gt;-->
+<!--              </ul>-->
+<!--            </div>-->
+<!--          </nav>-->
 <!--      </div>-->
-<!--    </section>-->
-<!--  </main>-->
-<!--  <aside>-->
-<!--    <h3> Які переваги використання еко сумок?</h3>-->
-
-<!--    <p>Перше та основне – це ідеальна заміна одноразових пакетів.-->
-<!--      Про те, яким шкідливим є пластик, <br> чи то його необгрунтоване гіперспоживання,-->
-<!--      не говорить хіба що тільки дуже лінива і байдужа людина. <br>  Еко сумка замість пакета з поліетилену –-->
-<!--      одне з небагатьох вірних рішень для збереження здоров'я нашої планети. </p>-->
-<!--      <p> Наступна перевага еко сумки –-->
-<!--      Читай за  <a href="https://borsa.ua/dlya-choho-potribni-eko-sumky">посиланням</a> </p>-->
-
-<!--    <h3> Чим відрізняється еко продукція від звичайної? </h3>-->
-<!--    <a href="https://eko-poplavok.com/eko-produkcziya">Читай тут</a>-->
-
-<!--    <br>-->
-      </section>
-    <p>Бажаєш залиши відугк? <a href="ResponcePage.html">Переходь за посиланням</a></p>
-  </aside>
-  <footer>
-    <p>
-      Контактна інформація: <br> corgibags@gmail.com <br>
-      +380990129004 <br>
-      проспект Миру 4Б, офіс 103 <br>
-    </p>
-    <p>&copy; 2023 Мій веб-сайт. Усі права захищені.</p>
   </footer>
 </body>
 
