--- a/AboutUS.html
+++ b/AboutUS.html
@@ -45,39 +45,131 @@
       </div>
     </header>
   </div>
- <div>
-  <h1>Вас вітає команда Corgi Bags</h1>
-  <p>  <span style="color: green">Corgi Bags - український виробник текстильної продукції для еко свідомого шопінгу.</span><br>
-    Наша позиція чітка і зрозуміла - запропонувати сучасну альтернативу поліетиленовим пакетам!<br>
-    Продукція Corgi Bags – сумки для покупок / шопери, экомешочки з сітки для продуктів / фруктовки,<br>
-    бавовняні мішечки для зберігання продуктів і упаковки подарунків, рюкзаки-органайзери для спорту,<br>
-    сумки для вологих речей WetBag. </p>
- <p>
-    Ми вже 4-й рік на ринку і за цей час встигли полюбитися Вам, наші дорогі клієнти,<br>
-    за нашу якісну продукцію і бездоганний сервіс, про що свідчать Ваші численні позитивні відгуки. <br>
-    Всі наші позиції виготовлені в Україні, для українців з тканин високої якості. <br>
-    Ми контролюємо процес закупівлі матеріалів, пошиття продукції,<br>
-    ми зацікавлені в хороших умовах роботи швачок і гідної оплати за працю. <br>
-    Ми приймаємо замовлення на великі партії, брендіруем нашу продукцію відповідно до <br>
-    побажань клієнтів - вшивають Ваші етикетки, наносимо Ваш логотип. <br>
-    Ми пропонуємо стильний шопінг без шкоди для навколишнього середовища! <br>
-</p> <p>
- <b>Чому це важливо саме зараз?</b>
-    Наша планета переживає велику екологічну кризу.  <br>Викиди парникових газів, острова сміття в Світовому океані ...<br>
-    Фахівці вважають, що у нас є ще максимум 50 років, щоб запобігти незворотні екологічні зміни.<br>
-    Перший крок - відмовитися від поліетилену і пластику;  стати на шлях боротьби з "вічним" сміттям,<br>
-    упаковкою і пакетами;  вибирати багаторазові, екологічні товари.<br>
-    Тому <b>закликаємо</b> всіх бути еко свідомими, підтримувати українського виробника,<br>
-    зменшувати свій вуглецевий слід, переходити на довговічне і екологічне!</p>
-   </div>
- <footer>
+ <main id="about-us">
+   <div class="conteiner">
+     <div class="conteiner-about-us">
+      <h1>Вас вітає команда Corgi Bags</h1>
+       <div class="about-info">
+         <div class="about-text">
+           <ul class="about-list">
+<!--             <div class="about-company-list">-->
+               <li class="about-list-item">
+                 <div class="text-company-idea">
+                   <h3>Компанія</h3>
+                   <p>
+                     Corgi Bags - український виробник текстильної продукції для еко свідомого шопінгу.
+                     Наша позиція чітка і зрозуміла - запропонувати сучасну альтернативу поліетиленовим пакетам!
+                   </p>
+                 </div>
+               </li>
+               <li class="about-list-item">
+                 <div class="text-company-production">
+                   <h3>Продукція</h3>
+                   <p>
+                     Продукція Corgi Bags – сумки для покупок / шопери, экомешочки з сітки для продуктів / фруктовки,
+                     бавовняні мішечки для зберігання продуктів і упаковки подарунків,
+                     рюкзаки-органайзери для спорту, сумки для вологих речей WetBag.
+                   </p>
+                 </div>
+               </li>
+               <li class="about-list-item">
+                 <div class="text-company-story">
+                   <h3>Робота</h3>
+                   <p>
+                     Ми вже 2-й рік на ринку і за цей час встигли полюбитися Вам, наші дорогі клієнти, за нашу якісну
+                     продукцію і бездоганний сервіс, про що свідчать Ваші численні позитивні відгуки.
+                   </p>
+                 </div>
+               </li>
+               <li class="about-list-item">
+                 <div class="text-company-units">
+                   <h3>Наші товари</h3>
+                   <p>
+                      Всі наші позиції виготовлені в Україні, для українців з тканин високої якості.  Ми контролюємо
+                     процес закупівлі матеріалів, пошиття продукції, ми зацікавлені в хороших умовах роботи швачок і
+                     гідної оплати за працю.
+                   </p>
+                 </div>
+               </li>
+               <li class="about-list-item">
+                 <div class="text-company-opportunities">
+                   <h3>Можливості</h3>
+                   <p>
+                     Ми приймаємо замовлення на великі партії, брендуємо нашу продукцію відповідно до побажань клієнтів
+                     - вшивають Ваші етикетки, наносимо Ваш логотип.
+                   </p>
+                 </div>
 
-    <p>
-      Контактна інформація: <br> corgibags@gmail.com <br>
-      +380990129004 <br>
-      проспект Миру 4Б, офіс 103 <br>
-    </p>
-    <p>&copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+               </li>
+
+<!--             </div>-->
+<!--             <div class="text-problem-solution">-->
+<!--               <div class="about-question">-->
+<!--                 <li class="about-list-item">-->
+<!--                   <div class="text-company-challenge">-->
+<!--                     <h3>-->
+<!--                       Ми пропонуємо стильний шопінг без шкоди для навколишнього середовища!-->
+<!--                     </h3>-->
+<!--                     <h3>-->
+<!--                     Чому це важливо саме зараз?-->
+<!--                     </h3>-->
+<!--                   </div>-->
+
+<!--                 </li>-->
+<!--               </div>-->
+<!--               <div class="about-answer">-->
+<!--                 <li class="about-list-item">-->
+<!--                     <div class="text-problem">-->
+<!--                       <p>-->
+<!--                         Наша планета переживає велику екологічну кризу.-->
+<!--                         Викиди парникових газів, острова сміття в Світовому океані ...-->
+<!--                         Фахівці вважають, що у нас є ще максимум 50 років, щоб запобігти незворотні екологічні зміни.-->
+<!--                       </p>-->
+<!--                     </div>-->
+<!--                   </li>-->
+<!--                 <li class="about-list-item">-->
+<!--                     <div class="text-solution">-->
+<!--                       <h3>Перший крок</h3>-->
+<!--                       <p>-->
+<!--                          відмовитися від поліетилену і пластику;-->
+<!--                       </p>-->
+<!--                       <p>-->
+<!--                          стати на шлях боротьби з "вічним" сміттям, упаковкою і пакетами;-->
+<!--                       </p>-->
+<!--                       <p>-->
+<!--                          вибирати багаторазові, екологічні товари.-->
+<!--                       </p>-->
+<!--                     </div>-->
+<!--                   </li>-->
+<!--                 <li class="about-list-item">-->
+<!--                     <div class="text-call">-->
+<!--                       <p>-->
+<!--                         Тому закликаємо всіх бути еко свідомими, підтримувати українського виробника,-->
+<!--                         зменшувати свій вуглецевий слід, переходити на довговічне і екологічне!-->
+<!--                       </p>-->
+<!--                     </div>-->
+<!--                   </li>-->
+<!--               </div>-->
+<!--             </div>-->
+           </ul>
+         </div>
+
+       </div>
+       </div>
+<!--      <img class="about-us-photo" src="img/ted1.png" alt="#">-->
+     <img src="img/" alt="">
+     </div>
+   </main>
+ <footer id="footer">
+    <div class="conteiner-footer">
+      <div class="footer-copywrite">
+        <p>corgibags@gmail.com</p>
+        <p> +380990129004<p>
+        <p>проспект Миру 4Б, офіс 103<p>
+        <p> &copy; 2023 Мій веб-сайт. Усі права захищені.</p>
+      </div>
+    </div>
+
   </footer>
 </body>
 </html>
